# gradebook

./: CMakeLists.txt  README.md  vcpkg.json
db/: schema.sql
include/: db.h  dbqueries.h  dbsetup.h  input.h  methods.h  printers.h  types.h
src/: classmethods.c  dbqueries.c  dbsetup.c  grademethods.c  input.c  main.c  printers.c  studentmethods.c  testmethods.c
tests/: CMakeLists.txt  dbqueries.cpp  dbsetup.cpp  input.cpp  main.cpp
